--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -25,4 +25,6 @@
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
 
+    <color name="photo_placeholder">#ccc</color>
+
 </resources>
