--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -8,8 +8,18 @@
     <dimen name="fab_press_translation_z">6dp</dimen>
 
 
-    <dimen name="app_bar_height">180dp</dimen>
+
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
+
+    <dimen name="md_keylines">16dp</dimen>
+    <dimen name="article_keylines">72dp</dimen>
+    <dimen name="app_bar_height">256dp</dimen>
+    <dimen name="toolbar_elevation">8dp</dimen>
 
 </resources>
