--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -9,48 +9,21 @@
     android:orientation="vertical"
     tools:context=".ui.ArticleDetailActivity">
 
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="256dp"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay"
+        android:layout_height="?attr/actionBarSize"
         >
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll"
-            android:fitsSystemWindows="true"
-            app:contentScrim="@android:color/transparent"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp">
-
-        <ImageView
-            android:id="@+id/article_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:adjustViewBounds="true"
-            app:layout_collapseMode="parallax"
-            android:scaleType="centerCrop" />
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-
-            app:layout_collapseMode="pin"
-
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_scrollFlags="scroll|enterAlways|snap"
+        android:elevation="4dp"
+        android:background="@android:color/transparent"
+        />
     </android.support.design.widget.AppBarLayout>
-
-
 
     <android.support.v4.view.ViewPager
 
