--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -28,7 +28,7 @@
             android:layout_below="@id/article_image"
             android:layout_gravity="bottom"
             android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
-            android:background="#333"
+            android:background="@color/meta_bar_backgroundColor"
             android:orientation="vertical"
             android:paddingBottom="@dimen/detail_metabar_vert_padding"
             android:paddingLeft="@dimen/detail_inner_horiz_margin"
@@ -39,22 +39,20 @@
 
             <TextView
                 android:id="@+id/article_title"
-                style="?android:attr/textAppearanceLarge"
+                style="@style/article_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
                 android:lineSpacingMultiplier="0.9"
                 android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
-                android:textColor="#fff"
-                android:textSize="@dimen/detail_title_text_size"
-                android:textStyle="bold" />
+                />
 
             <TextView
                 android:id="@+id/article_byline"
-                style="?android:attr/textAppearanceSmall"
+                style="@style/article_byline"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#8fff" />
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
 
         <TextView
