--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -19,12 +19,16 @@
     <color name="primaryColor">#f4db95</color>
     <color name="primaryLightColor">#ffffc6</color>
     <color name="primaryDarkColor">#c0aa66</color>
-    <color name="secondaryColor">#c5e1a5</color>
-    <color name="secondaryLightColor">#f8ffd7</color>
-    <color name="secondaryDarkColor">#94af76</color>
+    <color name="secondaryColor">#7b1fa2</color>
+    <color name="secondaryLightColor">#ae52d4</color>
+    <color name="secondaryDarkColor">#4a0072</color>
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
 
     <color name="photo_placeholder">#ccc</color>
+
+    <color name="meta_bar_backgroundColor">#333</color>
+
+    <color name="sub_title_textColor">#6000</color>
 
 </resources>
