--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -12,6 +12,11 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
 
+    <dimen name="padding_norm">16dp</dimen>
+    <dimen name="half_padding_norm">16dp</dimen>
+
+    <dimen name="small_bottom_padding">4dp</dimen>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -21,5 +26,6 @@
     <dimen name="article_keylines">72dp</dimen>
     <dimen name="app_bar_height">256dp</dimen>
     <dimen name="toolbar_elevation">8dp</dimen>
+    <dimen name="card_corner_radius">8dp</dimen>
 
 </resources>
