Improvement in scaling images

--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -67,6 +67,9 @@
             android:paddingBottom="@dimen/detail_body_bottom_margin"
             android:textColor="@color/cardview_dark_background"
 
+            android:maxLines="60"
+            android:ellipsize="marquee"
+
             android:textSize="@dimen/detail_body_text_size" />
 
     </RelativeLayout>
