--- a/XYZReader/src/main/res/layout/content_scrolling.xml
+++ b/XYZReader/src/main/res/layout/content_scrolling.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<FrameLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 <android.support.v4.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+
     android:id="@+id/swipe_refresh_layout"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,6 +22,7 @@
 
 
 </android.support.v4.widget.SwipeRefreshLayout>
+</FrameLayout>
 
 
 
