--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -56,10 +56,13 @@
             android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/recycler_view"
                 android:clipToPadding="false"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:paddingLeft="@dimen/list_side_margin"
+                android:paddingRight="@dimen/list_side_margin"
+               />
 
 
         </android.support.v4.widget.SwipeRefreshLayout>
