--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -19,9 +19,9 @@
     <color name="primaryColor">#f4db95</color>
     <color name="primaryLightColor">#ffffc6</color>
     <color name="primaryDarkColor">#c0aa66</color>
-    <color name="secondaryColor">#7b1fa2</color>
-    <color name="secondaryLightColor">#ae52d4</color>
-    <color name="secondaryDarkColor">#4a0072</color>
+    <color name="secondaryColor">#ffb300</color>
+    <color name="secondaryLightColor">#ffe54c</color>
+    <color name="secondaryDarkColor">#c68400</color>
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
 
