--- a/XYZReader/src/main/res/values/macro_layout.xml
+++ b/XYZReader/src/main/res/values/macro_layout.xml
@@ -10,6 +10,7 @@
 
 
     <bool name="detail_is_card">false</bool>
+    <dimen name="article_title_bottom_padding">4dp</dimen>
     <dimen name="detail_photo_height">304dp</dimen>
     <dimen name="detail_card_top_margin">@dimen/detail_photo_height</dimen>
     <dimen name="detail_inner_horiz_margin">16dp</dimen>
