--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -27,7 +27,6 @@
                 android:id="@+id/meta_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/article_image"
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
                 android:background="@color/meta_bar_backgroundColor"
@@ -35,7 +34,8 @@
                 android:paddingBottom="@dimen/detail_metabar_vert_padding"
                 android:paddingLeft="@dimen/detail_inner_horiz_margin"
                 android:paddingRight="@dimen/detail_inner_horiz_margin"
-                android:paddingTop="@dimen/detail_metabar_vert_padding">
+                android:paddingTop="@dimen/detail_metabar_vert_padding"
+                >
 
 
                 <TextView
@@ -65,10 +65,20 @@
                 android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                 android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                 android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
-                android:maxLines="60"
-                android:ellipsize="marquee"
-
                 android:textSize="@dimen/detail_body_text_size" />
+
+                <Button
+                    android:id="@+id/read_more"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="24dp"
+                    android:paddingStart="@dimen/activity_horizontal_margin"
+                    android:paddingBottom="@dimen/detail_body_bottom_margin"
+                    android:text="@string/previous"
+                    android:textColor="?android:attr/colorActivatedHighlight"
+                    android:textSize="18sp"
+                    android:textStyle="italic" />
+
 
         </com.example.xyzreader.ui.MaxWidthLinearLayout>
 
