--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -36,6 +36,7 @@
                 android:contentDescription="@string/article_image"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
+                android:transitionName="@string/transition_photo"
                 app:layout_collapseMode="parallax" />
 
 
