--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -28,6 +28,7 @@
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:contentDescription="@string/article_thumbnail_image"
+            android:transitionName="@string/transition_photo"
             android:background="@color/photo_placeholder" />
 
         <TextView
