--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -28,16 +28,7 @@
 
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-
-            <ImageView
-                android:id="@+id/article_image"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:contentDescription="@string/article_image"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                android:transitionName="@string/transition_photo"
-                app:layout_collapseMode="parallax" />
+            <include layout="@layout/article_image" />
 
 
             <android.support.v7.widget.Toolbar
