--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -21,15 +21,7 @@
         android:layout_gravity="center_horizontal"
         android:orientation="vertical">
 
-        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
-            android:id="@+id/thumbnail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/article_thumbnail_image"
-            android:transitionName="@string/transition_photo"
-            android:background="@color/photo_placeholder" />
+        <include layout="@layout/image_thumbnail" />
 
         <TextView
             android:id="@+id/article_title"
