--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
 <resources>
     <color name="primaryColor">#f4db95</color>
     <color name="primaryLightColor">#ffffc6</color>
-    <color name="primaryDarkColor">#c0aa66</color>
+    <color name="primaryDarkColor">#000000</color>
     <color name="secondaryColor">#ffb300</color>
     <color name="secondaryLightColor">#ffe54c</color>
     <color name="secondaryDarkColor">#c68400</color>
