--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -21,7 +21,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
+                android:layout_height="@dimen/logo_height"
                 android:contentDescription="@string/app_name"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax" />
@@ -34,10 +34,9 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_name"
             android:fitsSystemWindows="true"
-            android:layout_marginTop="@dimen/toolbar_main_top_margin"
-            android:layout_marginStart="@dimen/toolbar_main_top_margin"
+            android:layout_marginTop="@dimen/logo_top_margin"
+            android:layout_marginStart="@dimen/logo_start_margin"
             android:src="@drawable/logo"/>
-
 
     </android.support.design.widget.AppBarLayout>
 
@@ -51,9 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Include recycler view with animation if API > 21   -->
         <include layout="@layout/article_recycler_view" />
-
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
