--- a/XYZReader/src/main/res/layout/article_recycler_view.xml
+++ b/XYZReader/src/main/res/layout/article_recycler_view.xml
@@ -3,6 +3,6 @@
     android:layout_height="wrap_content"
     android:id="@+id/recycler_view"
     android:clipToPadding="false"
-    android:paddingLeft="@dimen/list_side_margin"
-    android:paddingRight="@dimen/list_side_margin"
+    android:paddingLeft="@dimen/recycler_list_start_padding"
+    android:paddingRight="@dimen/recycler_list_end_padding"
     xmlns:android="http://schemas.android.com/apk/res/android" />
