--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -1,4 +1,22 @@
 <resources>
+
+    <!-- General dimensions  -->
+
+
+    <!-- List Activity Dimensions -->
+    <dimen name="logo_height">80dp</dimen>
+    <dimen name="logo_top_margin">16dp</dimen>
+    <dimen name="logo_start_margin">16dp</dimen>
+    <dimen name="recycler_list_start_padding">4dp</dimen>
+    <dimen name="recycler_list_end_padding">4dp</dimen>
+
+    <!-- Detail Activity Dimensions -->
+
+
+    <!-- FAB Dimensions -->
+
+
+
     <!-- detail -->
     <dimen name="detail_title_text_size">32sp</dimen>
     <dimen name="detail_body_text_size">22sp</dimen>
