--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -7,11 +7,10 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="@dimen/detail_app_bar_height"
         android:fitsSystemWindows="true"
         android:gravity="center"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -21,15 +20,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:collapsedTitleGravity="center"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <include layout="@layout/article_image" />
-
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -37,8 +30,6 @@
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:layout_collapseMode="pin">
-
-
             </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -48,10 +39,8 @@
 
 
     <android.support.v4.view.ViewPager
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:id="@+id/article_pager"/>
 
