--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -17,8 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="#fff"
-            android:elevation="2dp"
+            android:background="@color/max_width_linear_bgColor"
+            android:elevation="@dimen/max_width_linear_elevation"
             android:maxWidth="@dimen/detail_card_max_width"
             android:orientation="vertical">
 
@@ -28,14 +28,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
+                android:layout_marginBottom="@dimen/meta_bar_bottom_margin"
                 android:background="@color/meta_bar_backgroundColor"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/detail_metabar_vert_padding"
-                android:paddingLeft="@dimen/detail_inner_horiz_margin"
-                android:paddingRight="@dimen/detail_inner_horiz_margin"
-                android:paddingTop="@dimen/detail_metabar_vert_padding"
-                >
+                android:paddingTop="@dimen/meta_bar_top_padding"
+                android:paddingStart="@dimen/meta_bar_horizontal_padding"
+                android:paddingEnd="@dimen/meta_bar_horizontal_padding"
+                android:paddingBottom="@dimen/meta_bar_bottom_padding">
 
 
                 <TextView
@@ -46,7 +45,7 @@
                     android:fontFamily="sans-serif-condensed"
                     android:textColor="@android:color/white"
                     android:lineSpacingMultiplier="0.9"
-                    android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
+                    android:paddingBottom="@dimen/meta_bar_title_bottom_padding"
                     />
 
                 <TextView
@@ -62,8 +61,8 @@
                 style="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
-                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
+                android:layout_marginStart="@dimen/article_body_horizontal_margin"
+                android:layout_marginEnd="@dimen/article_body_horizontal_margin"
                 android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                 android:textSize="@dimen/detail_body_text_size" />
 
@@ -71,12 +70,12 @@
                     android:id="@+id/read_more"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="24dp"
-                    android:paddingStart="@dimen/activity_horizontal_margin"
-                    android:paddingBottom="@dimen/detail_body_bottom_margin"
-                    android:text="@string/previous"
+                    android:paddingTop="@dimen/read_more_button_top_padding"
+                    android:paddingStart="@dimen/read_more_button_start_padding"
+                    android:paddingBottom="@dimen/read_more_button_bottom_padding"
+                    android:text="@string/continue_reading"
                     android:textColor="?android:attr/colorActivatedHighlight"
-                    android:textSize="18sp"
+                    android:textSize="@dimen/read_more_button_text_size"
                     android:textStyle="italic" />
 
 
