--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -3,10 +3,10 @@
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/tools"
 
-    android:layout_marginTop="@dimen/half_padding_norm"
-    android:layout_marginStart="@dimen/half_padding_norm"
-    android:layout_marginEnd="@dimen/half_padding_norm"
-    android:layout_marginBottom="@dimen/half_padding_norm"
+    android:layout_marginTop="@dimen/card_item_margin"
+    android:layout_marginStart="@dimen/card_item_margin"
+    android:layout_marginEnd="@dimen/card_item_margin"
+    android:layout_marginBottom="@dimen/card_item_margin"
 
     card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="card_corner_radius"
@@ -27,10 +27,10 @@
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/padding_norm"
-            android:paddingTop="@dimen/padding_norm"
-            android:paddingRight="@dimen/padding_norm"
-            android:paddingBottom="@dimen/small_bottom_padding"
+            android:paddingLeft="@dimen/article_title_padding"
+            android:paddingTop="@dimen/article_title_padding"
+            android:paddingRight="@dimen/article_title_padding"
+            android:paddingBottom="@dimen/article_title_btm_padding"
             android:textColor="@color/primaryTextColor"
             android:ellipsize="end"
             android:maxLines="4" />
@@ -40,9 +40,9 @@
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/padding_norm"
-            android:paddingRight="@dimen/padding_norm"
-            android:paddingBottom="@dimen/padding_norm"
+            android:paddingLeft="@dimen/article_title_padding"
+            android:paddingRight="@dimen/article_title_padding"
+            android:paddingBottom="@dimen/article_title_padding"
             android:textColor="@color/sub_title_textColor"
             android:maxLines="2"
             android:ellipsize="end" />
