--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -9,6 +9,10 @@
     <dimen name="logo_start_margin">16dp</dimen>
     <dimen name="recycler_list_start_padding">4dp</dimen>
     <dimen name="recycler_list_end_padding">4dp</dimen>
+    <dimen name="card_item_margin">16dp</dimen>
+    <dimen name="article_title_padding">16dp</dimen>
+    <dimen name="article_title_btm_padding">4dp</dimen>
+    <integer name="list_column_count">2</integer>
 
     <!-- Detail Activity Dimensions -->
     <dimen name="detail_app_bar_height">300dp</dimen>
@@ -24,11 +28,12 @@
     <dimen name="read_more_button_start_padding">16dp</dimen>
     <dimen name="read_more_button_bottom_padding">96dp</dimen>
     <dimen name="read_more_button_text_size">18sp</dimen>
+    <dimen name="article_image_height">300dp</dimen>
 
 
 
     <!-- FAB Dimensions -->
-
+    <dimen name="fab_margin">16dp</dimen>
 
 
     <!-- detail -->
@@ -40,26 +45,5 @@
     <dimen name="fab_press_translation_z">6dp</dimen>
 
 
-
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="text_margin">16dp</dimen>
-
-    <dimen name="padding_norm">16dp</dimen>
-    <dimen name="half_padding_norm">16dp</dimen>
-
-    <dimen name="small_bottom_padding">4dp</dimen>
-
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-
-
-    <dimen name="md_keylines">16dp</dimen>
-    <dimen name="article_keylines">72dp</dimen>
-    <dimen name="app_bar_height">128dp</dimen>
-    <dimen name="toolbar_elevation">8dp</dimen>
-    <dimen name="card_corner_radius">8dp</dimen>
-
-    <dimen name="toolbar_main_top_margin">16dp</dimen>
 
 </resources>
