--- a/XYZReader/src/main/res/layout-v21/article_recycler_view.xml
+++ b/XYZReader/src/main/res/layout-v21/article_recycler_view.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.xyzreader.adapters.GridRecyclerView android:layout_width="wrap_content"
+<com.example.xyzreader.adapters.GridRecyclerView
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/recycler_view"
     android:clipToPadding="false"
     android:layoutAnimation="@anim/grid_layout_animation_from_bottom"
-    android:paddingLeft="@dimen/recycler_list_start_padding"
-    android:paddingRight="@dimen/recycler_list_end_padding"
+    android:paddingLeft="@dimen/recycler_list_padding"
+    android:paddingRight="@dimen/recycler_list_padding"
     xmlns:android="http://schemas.android.com/apk/res/android" />
