--- a/XYZReader/src/main/res/layout/article_recycler_view.xml
+++ b/XYZReader/src/main/res/layout/article_recycler_view.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView android:layout_width="wrap_content"
+<android.support.v7.widget.RecyclerView
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/recycler_view"
     android:clipToPadding="false"
-    android:paddingLeft="@dimen/recycler_list_start_padding"
-    android:paddingRight="@dimen/recycler_list_end_padding"
+    android:paddingLeft="@dimen/recycler_list_padding"
+    android:paddingRight="@dimen/recycler_list_padding"
     xmlns:android="http://schemas.android.com/apk/res/android" />
