--- a/XYZReader/src/main/res/layout/image_thumbnail.xml
+++ b/XYZReader/src/main/res/layout/image_thumbnail.xml
@@ -6,4 +6,5 @@
     android:adjustViewBounds="true"
     android:contentDescription="@string/article_thumbnail_image"
     android:background="@color/photo_placeholder"
+    android:src="@mipmap/ic_launcher"
     xmlns:android="http://schemas.android.com/apk/res/android" />
