--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -45,18 +45,8 @@
         android:id="@+id/article_pager"/>
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        app:fabSize="normal"
-        app:elevation="@dimen/fab_elevation"
-        app:pressedTranslationZ="12dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:background="@drawable/add_fab_background"
-        android:contentDescription="@string/action_share"
-        android:src="@drawable/ic_share" />
+    <include layout="@layout/fab_layout"/>
+
 
 
 </android.support.design.widget.CoordinatorLayout>
