--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
 
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="@style/Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
@@ -29,11 +29,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="article_text" parent="@android:style/TextAppearance.Large">
-        <item name="android:textColor">#fff</item>
-        <item name="android:textSize">@dimen/detail_title_text_size</item>
-        <item name="android:textStyle">bold</item>
-    </style>
+
 
     <style name="article_byline" parent="@android:style/TextAppearance.Small">
         <item name="android:textColor">#8fff</item>
