--- a/XYZReader/src/main/res/layout-v21/image_thumbnail.xml
+++ b/XYZReader/src/main/res/layout-v21/image_thumbnail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.example.xyzreader.ui.DynamicHeightNetworkImageView android:id="@+id/thumbnail"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="0dp"
     android:scaleType="centerCrop"
     android:adjustViewBounds="true"
 
